# chidraqul5

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  main.rs  server.rs
src/shared/: player.rs
